codex-rs/tui/src/snapshots/codex_tui__startup_draft__visual_tests__startup_dark_120x36.snap
---
source: tui/src/startup_draft_visual_tests.rs
expression: "sanitize_codex_version(&format!(\"{buffer:?}\"))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 36 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                >_ Codex v0.0.0                                                                             ",
        "                                                                                                                        ",
        "                Getting ready…                                                                                          ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                ╭──────────────────────────────────────────────────────────────────────────────────────╮                ",
        "                ┃ › Type a draft while Codex gets ready…                                               │                ",
        "                ╰──────────────────────────────────────────────────────────────────────────────────────╯                ",
        "                  ? shortcuts                                                                                           ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 8, fg: Rgb(163, 163, 160), bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 17, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 17, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 104, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 18, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 18, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 18, y: 18, fg: Magenta, bg: Rgb(42, 42, 42), underline: Reset, modifier: BOLD,
        x: 19, y: 18, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 20, y: 18, fg: Rgb(163, 163, 160), bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 56, y: 18, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 103, y: 18, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 104, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 19, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 19, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 104, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
