codex-rs/tui/src/snapshots/codex_tui__startup_draft__visual_tests__startup_dark_18x12.snap
---
source: tui/src/startup_draft_visual_tests.rs
expression: "sanitize_codex_version(&format!(\"{buffer:?}\"))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 18, height: 12 },
    content: [
        "                  ",
        "                  ",
        ">_ Codex · loading",
        "╭────────────────╮",
        "┃ › Type a draf… │",
        "╰────────────────╯",
        "  ? shortcuts     ",
        "                  ",
        "                  ",
        "                  ",
        "                  ",
        "                  ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 2, fg: Rgb(163, 163, 160), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Magenta, bg: Rgb(42, 42, 42), underline: Reset, modifier: BOLD,
        x: 3, y: 4, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: Rgb(163, 163, 160), bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 17, y: 4, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 5, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
