codex-rs/tui/src/snapshots/codex_tui__startup_draft__visual_tests__startup_dark_48x20.snap
---
source: tui/src/startup_draft_visual_tests.rs
expression: "sanitize_codex_version(&format!(\"{buffer:?}\"))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 20 },
    content: [
        "  >_ Codex v0.0.0                   ",
        "                                                ",
        "  Getting ready…                                ",
        "                                                ",
        "                                                ",
        "                                                ",
        "                                                ",
        "                                                ",
        "                                                ",
        "  ╭──────────────────────────────────────────╮  ",
        "  ┃ › Type a draft while Codex gets ready…   │  ",
        "  ╰──────────────────────────────────────────╯  ",
        "    ? shortcuts                                 ",
        "                                                ",
        "                                                ",
        "                                                ",
        "                                                ",
        "                                                ",
        "                                                ",
        "                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 0, fg: Rgb(163, 163, 160), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 9, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 46, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 10, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 4, y: 10, fg: Magenta, bg: Rgb(42, 42, 42), underline: Reset, modifier: BOLD,
        x: 5, y: 10, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 6, y: 10, fg: Rgb(163, 163, 160), bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 42, y: 10, fg: Reset, bg: Rgb(42, 42, 42), underline: Reset, modifier: NONE,
        x: 45, y: 10, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 46, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Magenta, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 11, fg: Rgb(69, 69, 68), bg: Reset, underline: Reset, modifier: NONE,
        x: 46, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
